      default for \file{.ps} and \file{.eps} files.  This is available
      in Ghostscript 9.x (since 2010) whereas the previous default,
      \code{format = "pswrite"}, was removed in 9.10.

      \item Some unusual arguments to \code{embedFonts()} can not be
      specified as character vectors, and the defaults have changed
      accordingly.
    }
  }
  %% \subsection{BUG FIXES}{
  %%   \itemize{
  %%   }
  %% }
}

\section{\Rlogo CHANGES IN R 3.1.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \command{configure} option \option{--with-internal-tzcode}
      can now be used with variable \code{rsharedir}.

      \item \code{tools::buildVignette()} and \code{tools::buildVignettes()}
      with \code{clean = FALSE} no longer remove any created files.
      \code{buildvignette()} gains a \code{keep} argument for more
      cleaning customization.

      \item The Bioconductor \sQuote{version} used by
      \code{setRepositories()} can now be set by environment variable
      \env{R_BIOC_VERSION} at runtime, not just when \R is installed.
      (It has been stated that Bioconductor will switch from version
      2.14 to version 3.0 during the lifetime of the \R 3.1 series.)

      \item Error messages from bugs in embedded \samp{Sexpr} code
      in Sweave documents now report the source location.

      \item \code{type.convert()}, \code{read.table()} and similar
      \code{read.*()} functions get a new \code{numerals} argument,
      specifying how numeric input is converted when its conversion to
      double precision loses accuracy.  The default \code{exact = "allow.loss"}
      allows accuracy loss, as in all \R versions before 3.1.0.

      \item For some compiler versions, integer addition could accidentally
      overflow (without a warning).  \R's internal code should be more
      \dQuote{robust} now, thanks to Hervé Pagès.  (\PR{15774})
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{